# UDTL

./: .gitignore  Visualization.ipynb  focal_loss_tests.py  generate_batch.py  multi_class_log_results.csv  multi_label_jaccard.csv  process_logs.py  pyproject.toml  results.xlsx  results_1.csv  run_all_experiments.sh  train_advanced.py  train_base.py  vis.ipynb
datasets/: GRCGH.py  GRCGHFFT.py  PHMFFT.py  PU.py  PUFFT.py  SEU.py  SEUFFT.py  SequenceDatasets.py  UoC.py  UoCFFT.py  XJTU.py  XJTUFFT.py  __init__.py  sequence_aug.py
loss/: focal_loss.py
models/: AdversarialNet.py
test/: test_multi_label.py
utils/: entropy_CDA.py  train_utils_base.py  train_utils_combines.py
